Fix viewport height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -228,9 +228,13 @@ body {
 }
 
 @media (max-width: 560px) {
+  .title {
+    display: none;
+  }
   .wrapper {
     width: 100%;
     height: 100%;
+    height: 100vh;
     top: 0;
     left: 0;
     bottom: 0;
@@ -240,5 +244,6 @@ body {
   }
   .wrapper .inner {
     height: 100%;
+    height: 100vh;
   }
 }
